[package]
name = "try-nvcomp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[dependencies]
cudarc = { version = "0.17", features = ["cuda-12060"] }
zstd = "0.13"
lz4 = "1.26"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
bytesize = "1.3"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
bindgen = "0.72"
cc = "1.0"
pkg-config = "0.3"

[profile.release]
  lto = true
  panic = "abort"
